# gval

./: .gitignore  CMakeLists.txt  README  README.md  configure.ac
cmake/Modules/: FindFFTW.cmake
src/: CMakeLists.txt  Makefile.am  build_voc.cpp  display_image.cpp  draw_keypoints.cpp  gval_bow.c  gval_bow.h  gval_cv.cpp  gval_cv.hpp  gval_keypoints.c  gval_keypoints.h  gval_merge.c  gval_mfcc.c  gval_mfcc.h  gval_plugin.c  gval_sift.c  gval_sift.h  gval_stft.c  gval_stft.h  gval_sum.c  gval_utils.c  gval_utils.h  gval_voc_size.cpp  matwr_test.cpp
